# FlightCheck

./: .fcheck  .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  myfile.txt
ci/: before_deploy.sh  script.sh
npm/: README.md  package-lock.json  package.json
npm/lib/: download.js  getBinary.js  install.js  run.js
src/: main.rs
