[package]
name = "flightcheck"
version = "1.0.0"
authors = ["Ross MacD <rossmacdonald3411@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"
text_io = "0.1.8"
ansi_term = "0.12.1"
crossterm = "0.17.5"